--- a/flask/flask-3/templates/base.html
+++ b/flask/flask-3/templates/base.html
@@ -10,9 +10,19 @@
     <header>Hlavička</header>
     <nav>
         <p>Menu</p>
+        {% if session["uzivatel"] %}
+            <a href="{{url_for('login')}}">Logout</a>
+        {%else%}
+            <a href="{{url_for('login')}}">Login</a>
+        {% endif %}
+        
         <a href="{{url_for('home')}}">Home</a>
         <a href="{{url_for('o_nas')}}">O nás</a>
-        <a href="{{url_for('kontakt')}}">Kontakt</a>
+        <a href="{{url_for('fotogalerie')}}">Fotogalerie</a>
+        {% if session["uzivatel"] %}
+            <a href="{{url_for('kontakt')}}">Kontakt</a>
+            <a href="{{url_for('nahrat_soubor')}}">Nahrávání obrázku</a>
+        {% endif %}        
     </nav>
     <aside>Boční panel s doplňkovými informacemi</aside>
     <main>
@@ -20,6 +30,11 @@
         Zde bude hlavní obsah stránky...
         {% endblock %}
     </main>
-    <footer>&copy; Copyright 2024</footer>
+    <footer>
+        {%if session["uzivatel"]%}
+            <p>{{session["uzivatel"]}}</p>
+        {%endif%}    
+        &copy; Copyright 2024
+    </footer>
 </body>
 </html>
